Delete duplicated style between third and fourth element

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -8,12 +8,11 @@
     font-size: 36px;
 }
 
-#third {
-    font-size: 24px; 
+.font-size {
+    font-size: 24px;
 }
 
 #fourth {
     background-color: rgb(144, 238, 144);
-    font-size: 24px;
     font-weight: bold;
 }
